Fix bug where message section was too large if list of posts is smaller than screen
If we don't cap the maximum size of the messages row,
it will be expanded to fit the screen if there is
empty space (vertically).

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -13,7 +13,11 @@
 .grid-container {
     display: grid;
     grid-template-columns: var(--margin) 3fr 1fr var(--margin);
-    grid-template-rows: 15vh auto;
+    grid-template-rows:
+        [navbar] 15vh
+        [header] 25vh
+        [messages] minmax(0, min-content)
+        auto;
     grid-template-areas:
         "navbar navbar navbar navbar"
         ". header header ."
